--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,39 @@
 <resources>
 
   <!-- Base application theme. -->
-  <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+  <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
     <!-- Customize your theme here. -->
     <item name="colorPrimary">@color/colorPrimary</item>
     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     <item name="colorAccent">@color/colorAccent</item>
+
   </style>
+
+
+  <style name="Headline" parent="Base.TextAppearance.AppCompat.Headline">
+    <item name="android:textSize">@dimen/font_xxxlarge</item>
+    <item name="android:textColor">@android:color/white</item>
+    <item name="android:fontFamily">@font/robotoslab_bold</item>
+  </style>
+
+  <style name="caption" parent="Base.TextAppearance.AppCompat.Caption">
+    <item name="android:textSize">@dimen/font_xxlarge</item>
+    <item name="android:textColor">@color/color_off_white</item>
+    <item name="android:fontFamily">@font/robotoslab_regular</item>
+  </style>
+
+
+  <style name="subhead" parent="Base.TextAppearance.AppCompat.Subhead">
+    <item name="android:textColor">@color/color_grey_text</item>
+    <item name="android:textSize">@dimen/font_small</item>
+    <item name="android:fontFamily">@font/robotoslab_bold</item>
+  </style>
+
+  <style name="description" parent="Base.TextAppearance.AppCompat.Display1">
+    <item name="android:textColor">@color/color_grey_text</item>
+    <item name="android:textSize">@dimen/font_medium</item>
+    <item name="android:fontFamily">@font/robotoslab_regular</item>
+  </style>
+
 
 </resources>
