--- a/app/src/main/res/layout/layout_app_bar_headlines.xml
+++ b/app/src/main/res/layout/layout_app_bar_headlines.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/black"
@@ -15,11 +14,16 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/padding_medium"
-        app:navigationIcon="@drawable/ic_arrow_back_white_42dp"
-        app:titleTextAppearance="@style/Headline"
-        app:titleTextColor="@android:color/white"
         >
+      <TextView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:gravity="center_horizontal"
+          android:padding="@dimen/padding_medium"
+          android:text="@string/headlines"
+          android:textAllCaps="true"
+          android:textAppearance="@style/Headline"
+          />
 
     </androidx.appcompat.widget.Toolbar>
 
