--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,6 @@
     <item name="colorPrimary">@color/colorPrimary</item>
     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     <item name="colorAccent">@color/colorAccent</item>
-
   </style>
 
 
@@ -33,6 +32,15 @@
     <item name="android:textColor">@color/color_grey_text</item>
     <item name="android:textSize">@dimen/font_medium</item>
     <item name="android:fontFamily">@font/robotoslab_regular</item>
+  </style>
+
+  <style name="AppButton">
+    <item name="android:background">@android:color/white</item>
+    <item name="android:textColor">@android:color/black</item>
+    <item name="android:textSize">@dimen/font_large</item>
+    <item name="android:padding">@dimen/padding_medium</item>
+    <item name="android:fontFamily">@font/robotoslab_bold</item>
+
   </style>
 
 
