--- a/app/src/main/res/layout/fragment_headlines.xml
+++ b/app/src/main/res/layout/fragment_headlines.xml
@@ -1,15 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/item_background"
+
     >
-  <include layout="@layout/layout_app_bar_headlines"/>
+  <include
+      layout="@layout/layout_app_bar_headlines"
+      android:id="@+id/app_layout"
+      />
 
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/recycler_view"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:background="@color/item_background"
+      android:layout_below="@id/app_layout"
       />
-</LinearLayout>
+
+  <TextView
+      android:id="@+id/tv_error"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_centerInParent="true"
+      android:gravity="center_horizontal"
+      android:padding="@dimen/padding_medium"
+      android:textAppearance="@style/caption"
+      android:textColor="@color/color_off_white"
+      tools:text="Error Appers Here"
+      />
+
+</RelativeLayout>
