--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -116,7 +116,7 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
-          android:layout_marginTop="@dimen/padding_large"
+          android:layout_marginTop="@dimen/padding_xlarge"
           android:layout_alignParentEnd="true"
           android:layout_below="@id/tv_description"
           android:text="@string/open_source"
